Python/pylifecycle.c
@@ -399,16 +399,9 @@ typedef struct _CandidateLocale {
 static _LocaleCoercionTarget _TARGET_LOCALES[] = {
     {"C.UTF-8"},
     {"C.utf8"},
-    /* {"UTF-8"}, */
+    {"UTF-8"},
     {NULL}
 };
-
-/* XXX (ncoghlan): Using UTF-8 as a target locale is currently disabled due to
- *                 problems encountered on *BSD systems with those test cases
- * For additional details see:
- *     nl_langinfo CODESET error: https://bugs.python.org/issue30647
- *     locale handling differences: https://bugs.python.org/issue30672
- */
 
 static char *
 get_default_standard_stream_error_handler(void)
@@ -485,11 +478,22 @@ _Py_CoerceLegacyLocale(void)
         const char *locale_override = getenv("LC_ALL");
         if (locale_override == NULL || *locale_override == '\0') {
             /* LC_ALL is also not set (or is set to an empty string) */
+            const char *initial_locale = setlocale(LC_CTYPE, NULL);
             const _LocaleCoercionTarget *target = NULL;
             for (target = _TARGET_LOCALES; target->locale_name; target++) {
                 const char *new_locale = setlocale(LC_CTYPE,
                                                    target->locale_name);
                 if (new_locale != NULL) {
+#if defined(HAVE_LANGINFO_H) && defined(CODESET)
+                    /* Also ensure that nl_langinfo works in this locale */
+                    char *codeset = nl_langinfo(CODESET);
+                    if (!codeset || *codeset == '\0') {
+                        /* CODESET is not set or empty, so skip coercion */
+                        new_locale = NULL;
+                        setlocale(LC_CTYPE, initial_locale);
+                        continue;
+                    }
+#endif
                     /* Successfully configured locale, so make it the default */
                     _coerce_default_locale_settings(target);
                     return;
